2010-04-23  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Eric Seidel

        QT does not support textInputController.firstRectForCharacterRange(),
        so, skip editing/inserting/caret-position.html for QT.
        https://bugs.webkit.org/show_bug.cgi?id=25319

        * platform/qt/Skipped:

2010-04-23  MORITA Hajime  <morrita@google.com>

        Not reviewed. Added missing expectation files for
        https://bugs.webkit.org/show_bug.cgi?id=37187

        * platform/mac/svg/custom/broken-internal-references-expected.checksum: Added.
        * platform/mac/svg/custom/broken-internal-references-expected.png: Added.

2010-04-23  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Dan Bernstein and Darin Adler

        Fix issue "caret does not paint after type in characters in right
        aligned div or after delete all characters in RTL div or 
        0px right padding RTL textarea"
        https://bugs.webkit.org/show_bug.cgi?id=25319

        * editing/inserting/caret-position-expected.txt: Added.
        * editing/inserting/caret-position.html: Added.
        * platform/mac/editing/input/caret-primary-bidi-expected.txt:

2010-04-23  MORITA Hajime  <morrita@google.com>

        Reviewed by Nikolas Zimmermann.

        https://bugs.webkit.org/show_bug.cgi?id=37187
        SVG <use href="foo"> is interpreted as <use href="#foo">

        * platform/mac/svg/custom/broken-internal-references-expected.checksum: Added.
        * platform/mac/svg/custom/broken-internal-references-expected.png: Added.
        * platform/mac/svg/custom/broken-internal-references-expected.txt: Added.
        * svg/custom/broken-internal-references.svg: Added.
        * svg/dynamic-updates/SVGTRefElement-dom-href-attr-expected.txt:
        * svg/dynamic-updates/script-tests/SVGTRefElement-dom-href-attr.js:
        (executeTest): Updated to follow this fix. href value should be an URL, not an id.

2010-04-23  Adam Langley  <agl@chromium.org>
