@@ -1,0 +1,14 @@
+<style>
+    span:after { content: 'not '; }
+</style>
+<p>
+    Test for <i><a href="rdar://problem/7898436">rdar://problem/7898436</a> :after content is duplicated</i>.
+</p>
+<p>
+    The test passed if the word &ldquo;not&rdquo; appears exactly once in the following sentence:
+</p>
+<div style="font-size: 96px;">
+The test did
+<span><b><div></div></b></span>
+fail.
+</div>
