@@ -1,0 +1,35 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 53x18
+          text run at (0,0) width 53: "Test for "
+        RenderInline {I} at (0,0) size 326x18
+          RenderInline {A} at (0,0) size 154x18 [color=#0000EE]
+            RenderText {#text} at (53,0) size 154x18
+              text run at (53,0) width 154: "rdar://problem/7898436"
+          RenderText {#text} at (207,0) size 172x18
+            text run at (207,0) width 172: " :after content is duplicated"
+        RenderText {#text} at (379,0) size 4x18
+          text run at (379,0) width 4: "."
+      RenderBlock {P} at (0,34) size 784x18
+        RenderText {#text} at (0,0) size 508x18
+          text run at (0,0) width 508: "The test passed if the word \x{201C}not\x{201D} appears exactly once in the following sentence:"
+      RenderBlock {DIV} at (0,68) size 784x220
+        RenderBlock (anonymous) at (0,0) size 784x110
+          RenderText {#text} at (0,0) size 455x110
+            text run at (0,0) width 455: "The test did"
+          RenderInline {SPAN} at (0,0) size 0x0
+            RenderInline {B} at (0,0) size 0x0
+        RenderBlock (anonymous) at (0,110) size 784x0
+          RenderBlock {DIV} at (0,0) size 784x0
+        RenderBlock (anonymous) at (0,110) size 784x110
+          RenderInline {SPAN} at (0,0) size 147x110
+            RenderInline {B} at (0,0) size 0x0
+            RenderInline (generated) at (0,0) size 147x110
+              RenderText at (0,0) size 147x110
+                text run at (0,0) width 147: "not "
+          RenderText {#text} at (147,0) size 153x110
+            text run at (147,0) width 153: "fail."
